# adventOfCode

./: .gitignore  README.md
2018/05/: alchemy.ml
2019/: .gitignore  SConstruct
2019/day01/: fuel.cpp
2019/day02/: intcode.cpp
2019/day03/: wires.cpp
2019/include/: utils.hpp
2019/utils/: utils.cpp
2020/01/: report.ml  report.py
2020/02/: passwords.ml
2020/03/: trees.ml
2020/04/: passport.ml
2020/05/: seat.ml
2020/06/: customs.ml
2020/07/: bags.ml
2020/08/: handheld.ml
2020/09/: encoding.ml
2020/10/: adapters.ml
2021/day10/: syntax.ml
2021/day11/: octopus.ml
2021/day12/: path.ml
2021/day13/: origami.ml
2021/day14/: polymer2.ml
2021/day17/: trick2.ml
2021/day19/: beacons.ml
2021/day3/: diag.ml  diag2.ml
2021/day4/: bingo1.ml
2021/day5/: hydro.ml
2021/day6/: fish.ml
2021/day7/: whale.ml
2021/day8/: day8.ml
2021/day9/: smoke.py
2022/01/: calories.ml
2022/02/: rockpaperscissor.ml
2022/03/: rucksacks.ml
2022/04/: cleanup.ml
2022/05/: stacks.ml
2022/06/: tuning.ml
2022/07/: space.ml
2022/08/: treetop.ml
2022/09/: ropes.ml
2022/10/: cathode.ml
2022/11/: monkeys.ml
2022/12/: climbing.ml
2022/13/: distress.ml
2022/14/: regolith.ml
2022/15/: beacon.ml
2022/16/: volcanium.ml
2022/17/: pyroclastic.ml
2022/18/: boulders.ml
2022/19/: minerals.ml
2022/21/: monkey_math.ml
2023/: Cargo.toml
2023/day01/: Cargo.toml  trebuchet.rs
2023/day02/: Cargo.toml  cube.rs
2023/day03/: Cargo.toml  gear.rs
2023/day04/: Cargo.toml  scratchcards.rs
2023/day05/: Cargo.toml  fertilizer.rs
2023/day06/: Cargo.toml  boats.rs
2023/day07/: Cargo.toml  camel.rs
2023/day08/: Cargo.toml  wasteland.rs
2023/day09/: Cargo.toml  mirage.rs
2023/day10/: Cargo.toml  maze.rs
common/: utils.ml
day1/: sonarSweep.py
day10/: syntax.ml
day14/: polymer.ml
day15/: chitons.ml
day16/: packet.ml
day17/: output  trick_shot.ml
day18/: snailfish.ml
day2/: dive1.ml
day20/: test2  trench.ml
day21/: dirac_dice.ml
day22/: reboot.ml
day8/: day8.ml
