[package]
name = "day02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cube"           # The name of the target.
path = "cube.rs"    # The source file of the target.

[dependencies]
regex = "1.10.2"
