[package]
name = "day07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "camel"           # The name of the target.
path = "camel.rs"    # The source file of the target.

[dependencies]
itertools = "0.12.0"
