[package]
name = "day08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wasteland"           # The name of the target.
path = "wasteland.rs"    # The source file of the target.

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
regex = "1.10.2"
